; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_lrc.c_execlists_context_status_change.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_lrc.c_execlists_context_status_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i915_request = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@CONFIG_DRM_I915_GVT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i915_request*, i64)* @execlists_context_status_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @execlists_context_status_change(%struct.i915_request* %0, i64 %1) #0 {
  %3 = alloca %struct.i915_request*, align 8
  %4 = alloca i64, align 8
  store %struct.i915_request* %0, %struct.i915_request** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i32, i32* @CONFIG_DRM_I915_GVT, align 4
  %6 = call i32 @IS_ENABLED(i32 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %17

9:                                                ; preds = %2
  %10 = load %struct.i915_request*, %struct.i915_request** %3, align 8
  %11 = getelementptr inbounds %struct.i915_request, %struct.i915_request* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %4, align 8
  %15 = load %struct.i915_request*, %struct.i915_request** %3, align 8
  %16 = call i32 @atomic_notifier_call_chain(i32* %13, i64 %14, %struct.i915_request* %15)
  br label %17

17:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @IS_ENABLED(i32) #1

declare dso_local i32 @atomic_notifier_call_chain(i32*, i64, %struct.i915_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
